# Mishka

./: .gitmodules  CLAUDE.md  gradle.properties
.github/workflows/: build.yml
android/: build.gradle.kts
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  mihomo_wrapper.c  mishka_jni.c  process_helper.c
android/src/main/kotlin/top/yukonga/mishka/: MainActivity.kt  MishkaApplication.kt
android/src/main/kotlin/top/yukonga/mishka/service/: AndroidProfileFileManager.kt  BootReceiver.kt  MihomoPrefetcher.kt  MihomoRunner.kt  MihomoValidator.kt  MishkaRootService.kt  MishkaTileService.kt  MishkaTunService.kt  NotificationHelper.kt  ProfileReceiver.kt  ProfileWorker.kt  RootHelper.kt  RootTetherHijacker.kt  RootTproxyApplier.kt  RuntimeOverrideBuilder.kt
android/src/main/res/drawable/: ic_tile.xml
android/src/main/res/values/: themes.xml
android/src/main/res/xml/: network_security_config.xml
buildSrc/src/main/kotlin/: GoBuildTask.kt
gradle/: libs.versions.toml
shared/: build.gradle.kts  compose_compiler_config.conf
shared/schemas/top.yukonga.mishka.data.database.AppDatabase/: 3.json
shared/src/androidMain/kotlin/top/yukonga/mishka/platform/: AppIcon.android.kt  AppListProvider.android.kt  (+2 more)
shared/src/androidMain/native/mishka_core/: .gitignore  fetch.go  go.mod  go.sum  main.go  runtime.go
shared/src/commonMain/composeResources/drawable/: ic_launcher_foreground.xml
shared/src/commonMain/composeResources/values/: strings.xml
shared/src/commonMain/composeResources/values-zh-rCN/: strings.xml
shared/src/commonMain/kotlin/top/yukonga/mishka/: App.kt
(+56 files in other folders)
